<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/calc_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calc_button_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7"/>

        <Button
            android:id="@+id/calc_button_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_8"/>

        <Button
            android:id="@+id/calc_button_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_9"/>

        <Button
            android:id="@+id/calc_button_mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mul"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calc_button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4"/>

        <Button
            android:id="@+id/calc_button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5"/>

        <Button
            android:id="@+id/calc_button_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6"/>

        <Button
            android:id="@+id/calc_button_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/div"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calc_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1"/>

        <Button
            android:id="@+id/calc_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2"/>

        <Button
            android:id="@+id/calc_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3"/>

        <Button
            android:id="@+id/calc_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calc_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C" />

        <Button
            android:id="@+id/calc_button_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>

        <Button
            android:id="@+id/calc_button_dot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dot" />

        <Button
            android:id="@+id/calc_button_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub"/>

    </LinearLayout>

    <Button
        android:id="@+id/calc_button_equals"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:text="@string/equals" />

</LinearLayout>